# qraft

./: .coverage  .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  dev_tools_fix.md  docker-compose.yml  fix_rdagent_qlib.md  plan6.0.md  plan7.0.md  plan7.0_adjusted.md  plan7.0_architecture_details.md  plan7.0_implementation_guide.md  pyproject.toml  task_list.md  task_list_7.0.md  x_data.md
.cursor/rules/: context7.mdc
.github/workflows/: ci.yml  docker-build.yml
configs/: adapters.yaml  api.yaml  detectors.yaml  preprocessing.yaml
docker/: Dockerfile.base  Dockerfile.dev  Dockerfile.prod
docs/: 6.0README.md  6.0req_Q&A.md  6.0task_list.md  TUI6.0_cookbook.md  TUI6.0_plan.md  TUI6.0_task_list.md  TUI6.0_验收.md  TUI6.1_plan.md  TUI6.1_task_list.md  container_usage.md  dev_tools.md  github_cicd.md  plan2.0.md  plan3.0.md  plan4.0.md  plan5.0.md  plan_gpt5_cursor.md  task7_0.1.md  task7_0.2.md  task_1.1.md  task_1.2.md  task_1.3.md  task_1.4.md  task_2.1.md  task_2.2.1.md  task_2.2.2.md  task_2.2.3.md  task_2.2.md  task_2.3.md  task_2.4.md  task_3.1.md  task_3.2.md  task_3.3.md  task_4.1.md  task_4.2.md  task_4.3.md  task_4.4.md  task_5.1.md  task_5.2.md  task_5.3.md  (+38 more)
qraft/adapters/: base.py  file.py  rest.py  websocket.py
qraft/api/: main.py  models.py  routes.py
qraft/monitoring/: health.py  metrics.py
qraft/patterns/: detectors.py  engine.py  formatter.py
qraft/preprocessing/: operators.py  pipeline.py  state.py
qraft/storage/: clickhouse.py  schema.py
qraft/utils/: config.py  logging.py
requirements/: requirements-candidate.txt  requirements-stable.txt
requirements/constraints/: 3.10.txt  3.11.txt
scripts/: benchmark.py  dev-env.sh  replay.py  setup.sh  test-env.sh
tests/: conftest.py  test_adapters.py  test_patterns.py  test_preprocessing.py
tests/unit/: test_smoke.py
ui/: index.html
ui/css/: styles.css
ui/js/: app.js
(+2 files in other folders)
