[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qraft"
version = "0.0.1"
description = "Qraft 6.0 research and execution platform"
readme = "README.md"
authors = [{ name = "Qraft Dev" }]
requires-python = ">=3.10,<3.12"
dependencies = []

[tool.black]
line-length = 100
target-version = ["py310", "py311"]
extend-exclude = "/(\.venv|dist|build|artifacts)/"

[tool.isort]
profile = "black"
skip = [".venv", "dist", "build", "artifacts"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".venv", "dist", "build", "artifacts", "__pycache__"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --disable-warnings --maxfail=1"
pythonpath = ["."]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
strict_optional = true
ignore_missing_imports = true
